# march4

./: .gitignore  LOG.md  Makefile  PROGRESS.md  QUOT_LITERAL_STATUS.md  schema.sql  test_alloc_simple.march  test_array_call.march  test_array_index.march  test_array_simple.march  test_array_verbose.march  test_call_prim.march  test_conditional.march  test_ddup.march  test_dup_only.march  test_empty_array.march  test_execute.mar  test_execute.march  test_execute_complex.march  test_hamt  test_hamt.c  test_hamt_medium  test_hamt_medium.c  test_hamt_simple  test_hamt_simple.c  test_libhamt  test_libhamt.c  test_map_basic.march  test_mono.march  test_no_refgraph.march  test_quotations.mar  test_rc_over.march  test_rc_rot.march  test_refgraph_simple.march  test_runtime_quot.mar  test_stack.march  test_string_simple.march  test_true_false.mar  test_type_sig.march  test_user_call.march  (+1 more)
compiler/: README.md  codegen.ml  database.ml  dune  dune-project  lexer.ml  loader.ml  main.ml  march-compiler.opam  marchload.ml  marchrun.ml  parser.ml  typecheck.ml  types.ml  vm_ffi.ml  vm_stubs.c
docs/: CLAUDE.md  DESIGN.md  FFI.md  INET.md  LINKING.md  PLAN.md  QUOTATIONS.md  STATUS.md  SYNTAX.md  TYPES.md
examples/: hello.march  literals.march  test_encoding.march  typed.march
resources/: types.ml
runtime/: Cargo.toml  README.md
src/: Makefile  cells.c  cells.h  compiler.c  compiler.h  database.c  database.h  debug.c  debug.h  dictionary.c  dictionary.h  hamt.c  hamt.h  loader.c  loader.h  marchc.c  primitives.c  primitives.h  refgraph.c  runner.c  runner.h  schema.sql  tokens.c  (+11 more)
(+131 files in other folders)
