(executable
 (name main)
 (public_name marchc)
 (libraries sqlite3 unix digestif)
 (modules main types lexer parser typecheck codegen database loader))

(executable
 (name marchload)
 (public_name marchload)
 (libraries sqlite3)
 (modules marchload database loader))

(library
 (name vm_lib)
 (modules vm_ffi)
 (foreign_archives march_vm)
 (foreign_stubs
  (language c)
  (names vm_stubs)))

(executable
 (name marchrun)
 (public_name marchrun)
 (libraries sqlite3 vm_lib)
 (modules marchrun database loader))
